# tct-jbc

./: .gitignore  .travis.yml  LICENSE  README.md  stack-13.20.yaml  stack.dev.yaml  stack.yaml  tct-jbc.cabal
src/Tct/: Jbc.hs
src/Tct/Jbc/: Config.hs  Data.hs  Main.hs  Processor.hs  Strategies.hs
src/Tct/Jbc/Data/: Mode.hs  Problem.hs
src/Tct/Jbc/Encoding/: ArgumentFiltering.hs
src/Tct/Jbc/Method/: ToCTrs.hs  ToIts.hs  ToTrs.hs
src/Tct/Jbc/Processor/: PolynomialInterpretation.hs  ToCTrs.hs  ToIts.hs  ToTrs.hs
tct-jbc/: Main.hs
