Name:          tct-jbc
Version:       3.3.0
Author:
  Georg Moser, Michael Schaper
Maintainer:
  Michael Schaper <michael.schaper@student.uibk.ac.at>
Category:      Program Analysis
Stability:     Experimental
License:       BSD3
License-file:  LICENSE
Homepage:      http://cl-informatik.uibk.ac.at/software/tct/
Synopsis:      A Complexity Analyser for Integer Transition Systems
Description:
  The Tyrolean Complexity Tool (TcT for short) is a tool for proving resource
  bounds for different formal systems. This package provides techniques to
  analyse runtime complexity of Jinja bytecode (JBC) probgrams.
Cabal-version: >= 1.8
Build-type:    Simple

source-repository head
  type:     git
  location: git://github.com/ComputationWithBoundedResources/tct-jbc

executable tct-jbc
  main-is: 
    Main.hs
  hs-source-dirs:
    tct-jbc
  build-depends:
    base >= 4.7 && <5,
    tct-core,
    tct-trs,
    tct-its,
    tct-jbc == 3.3.*

  extensions: 
    DataKinds,
    DeriveDataTypeable,
    FlexibleInstances,
    FlexibleContexts,
    MultiParamTypeClasses,
    TypeOperators,
    TypeSynonymInstances

  ghc-options:
    -Wall -threaded -fforce-recomp -fno-warn-orphans -fno-spec-constr-count -rtsopts -with-rtsopts=-N

library
  hs-source-dirs:
    src
  exposed-modules:
    Tct.Jbc
    Tct.Jbc.Config
    Tct.Jbc.Data.Problem
    Tct.Jbc.Encoding.ArgumentFiltering
    Tct.Jbc.Processor.ToCTrs
    Tct.Jbc.Processor.ToTrs
    Tct.Jbc.Processor.ToIts
    Tct.Jbc.Processor.PolynomialInterpretation
    Tct.Jbc.Strategies
  build-depends:
    base >= 4.7 && <5,
    containers,
    mtl,

    term-rewriting,
    jat        >= 1.4,
    slogic     >= 0.3,

    tct-core   >= 3.3,
    tct-common >= 3.3,
    tct-its    >= 3.3,
    tct-trs    >= 3.3

  ghc-options:
    -Wall -fno-warn-orphans -fno-spec-constr-count
  extensions:
    DataKinds,
    DeriveDataTypeable,
    FlexibleInstances,
    FlexibleContexts,
    MultiParamTypeClasses,
    TypeOperators,
    TypeSynonymInstances

